--- a/imshi.html
+++ b/imshi.html
@@ -16,7 +16,7 @@
                         if (filter.indexOf(navigator.platform.toLowerCase()) < 0) {
                                 location.href = "about_theme_kemono.html"; //모바일 페이지 경로
                         } else {
-                                location.href = "timetable.html"; //PC 페이지 경로
+                                location.href = "about_theme_kemono.html"; //PC 페이지 경로
                         }
         }
         alert("준비중입니다!");
