--- a/about_theme_kemono.html
+++ b/about_theme_kemono.html
@@ -129,8 +129,7 @@
                 <a class="navbar-brand" href="about.html">내일 뭐 들었지</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="todaytable_kemono.html">오늘 시간표</a></li>
+                <ul class="nav navbar-nav navbar-right">                    <li><a href="todaytable_kemono.html">오늘 시간표</a></li>
                     <li><a href="weektable_kemono.html">주간 시간표</a></li>
                     <li><a href="weather_kemono.html">날씨</a></li>
                     <li class="dropdown">
@@ -178,5 +177,5 @@
             </footer>
         </div>
     </div>
-</body>s
+</body>
 </html>
