--- a/about_theme_kemono.html
+++ b/about_theme_kemono.html
@@ -126,7 +126,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="about.html">내일 뭐 들었지</a>
+                <a class="navbar-brand" href="about_theme_kemono.html">내일 뭐 들었지</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">                    <li><a href="todaytable_kemono.html">오늘 시간표</a></li>
