--- a/about_theme_kemono.html
+++ b/about_theme_kemono.html
@@ -174,6 +174,7 @@
             <footer class="container-fluid text-center hadan">
                 <div><img width="200" src="./img_theme/kemono/환상향_하양_케모노.png" /></div>
                 <div class="copyright">copyright@gensokyo, The Solidarity of Kim-Sang-Gueon, #AirKORAIL all rights reserved </div>
+                <div class="copyright">Special Thanks to #JinJeok</div>
             </footer>
         </div>
     </div>
