--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <li><a href="about.html">나는 노말한 프렌즈에요.</a></li>
                                 <li><a href="about_theme_kemono.html">케모노 프렌즈</a></li>
                                 <li><a href="about_theme_newgame.html">뉴 게임</a></li>
-                                <li><a href="about_theme_quest.html">크루세이더 퀘스트</a></li>
+                                <li><a href="imshi.html">크루세이더 퀘스트</a></li>
                             </ul>
                         </li>
                     </ul>
