--- a/imshi.html
+++ b/imshi.html
@@ -20,7 +20,7 @@
                         }
         }
         alert("준비중입니다!");
-        location.href = 'about_theme_kemono.html';
+        histroy.go(-1);
     </script>
     </head>
     <body>
