--- a/weektable.html
+++ b/weektable.html
@@ -106,6 +106,12 @@
         {
             padding:3px 20px;
         }
+	    
+	.copyright
+	    {
+		    color:azure;
+	    }
+	    
     </style>
 
 	<title>주간 시간표</title>
