--- a/todaytable_newgame.html
+++ b/todaytable_newgame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta name="theme-color" content="#E8D9FF">
+	<meta name="theme-color" content="#FFD9EC">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
