--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="todaytable.html">오늘 시간표</a></li>
                         <li><a href="weektable.html">주간 시간표</a></li>
-                        <li><a href="http://jd.benow.ca/jd-gui/downloads/jd-gui-0.3.6.windows.zip">JD-GUI다운로드</a></li>
+                        <li><a href="https://drive.google.com/open?id=0By2m5SXLWb5lVVRlOVNLbWVvUFk">문제 다운로드</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span>테마 변경</span>
